# owsa_public

./: .gitignore  Dockerfile  README.md  pyproject.toml  test-config.yaml  test-plugin.sh
kubernetes/: configmap.yaml  deployment.yaml  secret.yaml  setup-job.yaml
tests/: TESTING.md  script_test_openstack_connectivity.md  test_backend_integration.py  test_openstack_client_unit.py
waldur_site_agent_openstack/: __init__.py  backends.py  config.py  keystone_client.py  openstack_client.py  utils.py
